[package]
name = "rimseval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rimseval"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
time = { version = "0.3.36", features = ["macros", "parsing"] }
