[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[tool.flit.metadata]
module = "rimseval"
author = "Reto Trappitsch"
author-email = "reto@galactic-forensics.space"
home-page = "https://github.com/RIMS-Code/RIMSEval"
requires = [
    "iniabu>=1.1.2",
    "matplotlib",
    "numba~=0.57.1",
    "numpy~=1.24.4",
    "PyQt6",
    "scipy",
    "xlsxwriter"
]
requires-python=">=3.8,<3.12"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.rst"

[tool.flit.metadata.requires-extra]
dev = [
    "darglint>=1.5.1",
    "flake8",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-import-order",
    "bandit"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme"
]
test = [
    "hypothesis",
    "pytest>=6.0.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-mock"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=rimseval -v"
testpaths = "tests"

[tool.setuptools_scm]
write_to = "rimseval/_version.py"
