[project]
name = "rimseval"
version = "2.0.2"
description = "Evaluate resonance ionization mass spectrometry measurements, correct, and filter. Contains a reader for crd files (Chicago Raw Data) but can also convert FastComTec lst files to crd."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "iniabu>=1.1.2",
    "matplotlib",
    "numba~=0.60.0",
    "numpy~=1.26.4",
    "PyQt6",
    "scipy",
    "xlsxwriter"
]
readme = "README.rst"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }

[project.urls]
Source = "https://github.com/RIMS-Code/RIMSEval"
Documentation = "https://rimseval.readthedocs.io"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "hypothesis",
    "pytest>=6.0.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "pytest-mock",
]

[tool.rye.scripts]
test_cov = "rye run pytest --cov --cov-report xml"

[tool.maturin]
python-source = "python"
module-name = "rimseval._lowlevel"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=rimseval -v"
testpaths = "tests"
